For every utterance, Accuracy improved to : 0.5089

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4G6qSoViAH9lrri+8hhoa",
+      "authorship_tag": "ABX9TyPWuaX1FiM/EGQP0u/Q1907",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,14 +44,14 @@
         "import pickle\n",
         "from keras.utils.np_utils import to_categorical  "
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jPQj8ZNajTfc",
-        "outputId": "a9e0dcbf-00f4-439f-c2f7-1ce6f105b5f1",
+        "outputId": "17ca2cf1-6f4d-42e8-e79b-7608bab16802",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -60,12 +60,16 @@
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\n",
         "!pip install sentencepiece"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (0.1.94)\n"
+            "Collecting sentencepiece\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e5/2d/6d4ca4bef9a67070fa1cac508606328329152b1df10bdf31fb6e4e727894/sentencepiece-0.1.94-cp36-cp36m-manylinux2014_x86_64.whl (1.1MB)\n",
+            "\r\u001b[K     |▎                               | 10kB 21.4MB/s eta 0:00:01\r\u001b[K     |▋                               | 20kB 21.8MB/s eta 0:00:01\r\u001b[K     |▉                               | 30kB 17.0MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40kB 11.1MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51kB 9.3MB/s eta 0:00:01\r\u001b[K     |█▊                              | 61kB 9.2MB/s eta 0:00:01\r\u001b[K     |██                              | 71kB 6.2MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81kB 6.4MB/s eta 0:00:01\r\u001b[K     |██▋                             | 92kB 6.5MB/s eta 0:00:01\r\u001b[K     |███                             | 102kB 6.6MB/s eta 0:00:01\r\u001b[K     |███▎                            | 112kB 6.6MB/s eta 0:00:01\r\u001b[K     |███▌                            | 122kB 6.6MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133kB 6.6MB/s eta 0:00:01\r\u001b[K     |████▏                           | 143kB 6.6MB/s eta 0:00:01\r\u001b[K     |████▍                           | 153kB 6.6MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████                           | 174kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 184kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████▋                          | 194kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████▉                          | 204kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 215kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 225kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 235kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████                         | 245kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 256kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 266kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████                        | 276kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 286kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████▌                       | 296kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████▉                       | 307kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████                       | 317kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 327kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████▊                      | 337kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████                      | 348kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 358kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 368kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 378kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 389kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 399kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 409kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████                    | 419kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 430kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 440kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 450kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 460kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████▌                  | 471kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████▉                  | 481kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 491kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 501kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████▊                 | 512kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 522kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 532kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 542kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 552kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████▏               | 563kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 573kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 583kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 593kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 604kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 614kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 624kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 634kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 645kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 655kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 665kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████▍            | 675kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 686kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 696kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 706kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 716kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 727kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████▏          | 737kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 747kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 757kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 768kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 778kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 788kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 798kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████▏        | 808kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 819kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 829kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 839kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 849kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 860kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 870kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 880kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 890kB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 901kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 911kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 921kB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 931kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 942kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 952kB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▋    | 962kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 972kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 983kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 993kB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 1.0MB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 1.0MB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 1.0MB 6.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.0MB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.0MB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 1.1MB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 1.1MB 6.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 1.1MB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 1.1MB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 1.1MB 6.6MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 1.1MB 6.6MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1MB 6.6MB/s \n",
+            "\u001b[?25hInstalling collected packages: sentencepiece\n",
+            "Successfully installed sentencepiece-0.1.94\n"
           ],
           "name": "stdout"
         }
@@ -79,7 +83,7 @@
       "source": [
         "import tokenization"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -120,7 +124,7 @@
         "    \n",
         "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -143,14 +147,14 @@
         "    \n",
         "    return model"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "rpTgXa2hjje-",
-        "outputId": "b1875925-e67e-44d0-b7f1-8d53714240f5",
+        "outputId": "635f56af-0106-478b-c696-afa2038345a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -161,13 +165,13 @@
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 41.5 s, sys: 10.7 s, total: 52.2 s\n",
-            "Wall time: 1min 47s\n"
+            "CPU times: user 41.5 s, sys: 12.2 s, total: 53.7 s\n",
+            "Wall time: 1min 51s\n"
           ],
           "name": "stdout"
         }
@@ -186,7 +190,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oZ5pmNKbkf05",
-        "outputId": "b6e38c8e-8a4d-4390-ffc1-b7537637cf6d",
+        "outputId": "c40c1fac-6a9d-4bbf-c7e2-fbd843221f6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -195,12 +199,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
@@ -221,7 +225,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -247,7 +251,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -259,7 +263,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -273,7 +277,7 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -285,7 +289,7 @@
         "processed_data=np.asarray(processed_data)\n",
         "test_processed_data=np.asarray(test_processed_data)"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -297,7 +301,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -319,7 +323,7 @@
         "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
         "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -333,14 +337,14 @@
         "train_labels = Y\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1gmA9ffzqgMI",
-        "outputId": "5eb6baff-fda2-4e0f-84c2-2b9d911a7fc9",
+        "outputId": "48fe7076-ff77-4517-dc4d-fc3129e3890d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -349,7 +353,7 @@
         "model = build_model(bert_layer, max_len=160)\n",
         "model.summary()"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +389,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "dh3lTp-DqsFm",
-        "outputId": "0b6003e5-46f0-4a5c-b25e-5b353a112ad1",
+        "outputId": "e3851127-88e5-4ecb-c537-fe3793d0c44c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -394,28 +398,28 @@
         "train_history = model.fit(\n",
         "    train_input, train_labels,\n",
         "    epochs=6,\n",
-        "    batch_size=16\n",
+        "    batch_size=1\n",
         ")\n",
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/6\n",
-            "294/294 [==============================] - 472s 2s/step - loss: 0.4105 - accuracy: 0.3505\n",
+            "4699/4699 [==============================] - 799s 170ms/step - loss: 0.3733 - accuracy: 0.4337\n",
             "Epoch 2/6\n",
-            "294/294 [==============================] - 472s 2s/step - loss: 0.3278 - accuracy: 0.5510\n",
+            "4699/4699 [==============================] - 800s 170ms/step - loss: 0.2464 - accuracy: 0.6808\n",
             "Epoch 3/6\n",
-            "294/294 [==============================] - 471s 2s/step - loss: 0.2610 - accuracy: 0.6697\n",
+            "4699/4699 [==============================] - 799s 170ms/step - loss: 0.1393 - accuracy: 0.8410\n",
             "Epoch 4/6\n",
-            "294/294 [==============================] - 472s 2s/step - loss: 0.2000 - accuracy: 0.7712\n",
+            "4699/4699 [==============================] - 799s 170ms/step - loss: 0.0980 - accuracy: 0.8896\n",
             "Epoch 5/6\n",
-            "294/294 [==============================] - 471s 2s/step - loss: 0.1519 - accuracy: 0.8442\n",
+            "4699/4699 [==============================] - 798s 170ms/step - loss: 0.0886 - accuracy: 0.8974\n",
             "Epoch 6/6\n",
-            "294/294 [==============================] - 472s 2s/step - loss: 0.1154 - accuracy: 0.8893\n"
+            "4699/4699 [==============================] - 798s 170ms/step - loss: 0.0753 - accuracy: 0.9110\n"
           ],
           "name": "stdout"
         }
@@ -425,7 +429,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Cc_vLoXhvdc6",
-        "outputId": "9ba05ca9-1e96-4561-ba61-98ed77fc3685",
+        "outputId": "4d75a325-54c6-47cd-c787-d636f7bd576c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -434,13 +438,13 @@
         "score,acc=model.evaluate(test_input,test_Y,verbose=2)\n",
         "print(\"Accuracy : \"+ str(acc))"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "51/51 - 62s - loss: 0.3661 - accuracy: 0.5052\n",
-            "Accuracy : 0.5052372217178345\n"
+            "51/51 - 62s - loss: 0.4710 - accuracy: 0.5089\n",
+            "Accuracy : 0.5089340806007385\n"
           ],
           "name": "stdout"
         }
