--- a/BERT_on_IEMOCAP_for_ERC_Improvization.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC_Improvization.ipynb
@@ -152,27 +152,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SPBiw3jdQqXo"
+        "id": "SPBiw3jdQqXo",
+        "outputId": "7939963a-25ad-44ea-e9ae-fc0c247842f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%time\n",
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 38.2 s, sys: 11.6 s, total: 49.8 s\n",
+            "Wall time: 2min 20s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T0lDyjgKQrbW"
+        "id": "T0lDyjgKQrbW",
+        "outputId": "ae25fcbc-2ae7-4351-845b-ac742f8963e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -189,7 +214,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -215,7 +240,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -227,7 +252,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -241,7 +266,7 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -255,7 +280,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -268,7 +293,7 @@
         "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
         "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -282,14 +307,14 @@
         "train_labels = Y\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bYSK8AjpRYPx",
-        "outputId": "b55a0d72-f771-4be0-85f1-1d38a3eb25b0",
+        "outputId": "4b8cab72-e27e-4152-d5e1-d07da45e393a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -298,12 +323,12 @@
         "model = build_model(bert_layer, max_len=160)\n",
         "model.summary()"
       ],
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"functional_3\"\n",
+            "Model: \"functional_1\"\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
@@ -317,25 +342,25 @@
             "                                                                 input_mask[0][0]                 \n",
             "                                                                 segment_ids[0][0]                \n",
             "__________________________________________________________________________________________________\n",
-            "tf_op_layer_strided_slice_1 (Te [(None, 1024)]       0           keras_layer[1][1]                \n",
+            "tf_op_layer_strided_slice (Tens [(None, 1024)]       0           keras_layer[0][1]                \n",
             "__________________________________________________________________________________________________\n",
-            "tf_op_layer_Reshape_1 (TensorFl [(1, 1024, 1)]       0           tf_op_layer_strided_slice_1[0][0]\n",
+            "tf_op_layer_Reshape (TensorFlow [(1, 1024, 1)]       0           tf_op_layer_strided_slice[0][0]  \n",
             "__________________________________________________________________________________________________\n",
-            "conv1d_2 (Conv1D)               (1, 1022, 64)        256         tf_op_layer_Reshape_1[0][0]      \n",
+            "conv1d (Conv1D)                 (1, 1022, 64)        256         tf_op_layer_Reshape[0][0]        \n",
             "__________________________________________________________________________________________________\n",
-            "max_pooling1d_2 (MaxPooling1D)  (1, 340, 64)         0           conv1d_2[0][0]                   \n",
+            "max_pooling1d (MaxPooling1D)    (1, 340, 64)         0           conv1d[0][0]                     \n",
             "__________________________________________________________________________________________________\n",
-            "conv1d_3 (Conv1D)               (1, 338, 32)         6176        max_pooling1d_2[0][0]            \n",
+            "conv1d_1 (Conv1D)               (1, 338, 32)         6176        max_pooling1d[0][0]              \n",
             "__________________________________________________________________________________________________\n",
-            "max_pooling1d_3 (MaxPooling1D)  (1, 112, 32)         0           conv1d_3[0][0]                   \n",
+            "max_pooling1d_1 (MaxPooling1D)  (1, 112, 32)         0           conv1d_1[0][0]                   \n",
             "__________________________________________________________________________________________________\n",
-            "global_max_pooling1d_1 (GlobalM (1, 32)              0           max_pooling1d_3[0][0]            \n",
+            "global_max_pooling1d (GlobalMax (1, 32)              0           max_pooling1d_1[0][0]            \n",
             "__________________________________________________________________________________________________\n",
-            "dense_3 (Dense)                 (1, 32)              1056        global_max_pooling1d_1[0][0]     \n",
+            "dense (Dense)                   (1, 32)              1056        global_max_pooling1d[0][0]       \n",
             "__________________________________________________________________________________________________\n",
-            "dense_4 (Dense)                 (1, 16)              528         dense_3[0][0]                    \n",
+            "dense_1 (Dense)                 (1, 16)              528         dense[0][0]                      \n",
             "__________________________________________________________________________________________________\n",
-            "dense_5 (Dense)                 (1, 6)               102         dense_4[0][0]                    \n",
+            "dense_2 (Dense)                 (1, 6)               102         dense_1[0][0]                    \n",
             "==================================================================================================\n",
             "Total params: 335,150,007\n",
             "Trainable params: 335,150,006\n",
@@ -350,7 +375,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "99O-dUk_Ra5y",
-        "outputId": "b6661147-c745-4aca-88dd-8b056831bdba",
+        "outputId": "a5752de9-3068-4d6d-999f-a157694f0b3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -364,12 +389,23 @@
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 22,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "4699/4699 [==============================] - 790s 168ms/step - loss: 0.4285 - accuracy: 0.3409\n"
+            "Epoch 1/6\n",
+            "4699/4699 [==============================] - 791s 168ms/step - loss: 0.4277 - accuracy: 0.2764\n",
+            "Epoch 2/6\n",
+            "4699/4699 [==============================] - 790s 168ms/step - loss: 0.3870 - accuracy: 0.3882\n",
+            "Epoch 3/6\n",
+            "4699/4699 [==============================] - 790s 168ms/step - loss: 0.3461 - accuracy: 0.5414\n",
+            "Epoch 4/6\n",
+            "4699/4699 [==============================] - 791s 168ms/step - loss: 0.3083 - accuracy: 0.6182\n",
+            "Epoch 5/6\n",
+            "4699/4699 [==============================] - 789s 168ms/step - loss: 0.2740 - accuracy: 0.7008\n",
+            "Epoch 6/6\n",
+            "4699/4699 [==============================] - 789s 168ms/step - loss: 0.2496 - accuracy: 0.7523\n"
           ],
           "name": "stdout"
         }
@@ -383,14 +419,14 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": 32,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ifq6GS_ylKXA",
-        "outputId": "5330c6b3-29ed-4d4b-93fc-9d16c1d353a8",
+        "outputId": "33e8d711-fad8-42b7-b734-edae48d8f4c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -401,13 +437,13 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": 37,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy : 0.3536660505237215\n",
-            "Weighted F1-score : 0.2967924173702531\n"
+            "Accuracy : 0.5009242144177449\n",
+            "Weighted F1-score : 0.4784060369545624\n"
           ],
           "name": "stdout"
         }
