--- a/GRU_BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/GRU_BERT_on_IEMOCAP_for_ERC.ipynb
@@ -376,13 +376,23 @@
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/6\n",
-            "2808/4699 [================>.............] - ETA: 6:06 - loss: 0.4325 - accuracy: 0.2881"
+            "4699/4699 [==============================] - 914s 195ms/step - loss: 0.4223 - accuracy: 0.3118\n",
+            "Epoch 2/6\n",
+            "4699/4699 [==============================] - 921s 196ms/step - loss: 0.3634 - accuracy: 0.4450\n",
+            "Epoch 3/6\n",
+            "4699/4699 [==============================] - 921s 196ms/step - loss: 0.3132 - accuracy: 0.5561\n",
+            "Epoch 4/6\n",
+            "4699/4699 [==============================] - 920s 196ms/step - loss: 0.2681 - accuracy: 0.6340\n",
+            "Epoch 5/6\n",
+            "4699/4699 [==============================] - 922s 196ms/step - loss: 0.2272 - accuracy: 0.7048\n",
+            "Epoch 6/6\n",
+            "4699/4699 [==============================] - 922s 196ms/step - loss: 0.1828 - accuracy: 0.8121\n"
           ],
           "name": "stdout"
         }
@@ -396,13 +406,17 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ifq6GS_ylKXA"
+        "id": "ifq6GS_ylKXA",
+        "outputId": "df6f87ef-02b8-491d-fb06-734f41a48ae0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "y_pred1=np.argmax(y_pred,axis=1)\n",
@@ -410,8 +424,17 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy : 0.47504621072088726\n",
+            "Weighted F1-score : 0.46717331597724676\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
