--- a/BERT_on_IEMOCAP_for_DCNN.ipynb
+++ b/BERT_on_IEMOCAP_for_DCNN.ipynb
@@ -6,7 +6,6 @@
       "name": "BERT_on_IEMOCAP_for_ERC_Improvization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWT+l6AyCKAYMm3pTTJUV/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +48,7 @@
         "from keras.utils.np_utils import to_categorical  \n",
         "import time"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +64,7 @@
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\n",
         "!pip install sentencepiece"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +87,7 @@
       "source": [
         "import tokenization"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +119,7 @@
         "    \n",
         "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +149,7 @@
         "    \n",
         "    return model"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,13 +158,13 @@
         "id": "ILahRuvWwGDt"
       },
       "source": [
-        "base_model = applications.resnet50.ResNet50(weights= None, include_top=False, input_shape= (32,32,3))\n",
-        "x = base_model.output\n",
-        "x = GlobalAveragePooling2D()(x)\n",
-        "predictions = Dense(6 , activation= 'softmax')(x)\n",
-        "model = Model(inputs = base_model.input, outputs = predictions)"
+        "# base_model = applications.resnet50.ResNet50(weights= None, include_top=False, input_shape= (32,32,3))\n",
+        "# x = base_model.output\n",
+        "# x = GlobalAveragePooling2D()(x)\n",
+        "# predictions = Dense(6 , activation= 'softmax')(x)\n",
+        "# model = Model(inputs = base_model.input, outputs = predictions)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +179,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +596,7 @@
         "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D,GlobalAveragePooling2D\n",
         "from keras.callbacks import TensorBoard,ReduceLROnPlateau,ModelCheckpoint"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +612,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +637,7 @@
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,7 +664,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,7 +690,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -703,7 +702,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +716,7 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -731,7 +730,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +743,7 @@
         "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
         "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -759,7 +758,7 @@
         "train_labels = Y\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -776,7 +775,7 @@
         "model = build_model(bert_layer, max_len=161)\n",
         "model.summary()"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
