Asking for drive credentials pulled up

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2WJl44GkxLBOF0CWefdia",
+      "authorship_tag": "ABX9TyNNj1oO0Js4s67Lndbsz1YW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "irbKXIVqMGym",
-        "outputId": "b748361b-96d8-4293-d8a9-6ced6940008d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "75d0ce31-84bb-4442-bf25-1ca5f45273e1"
       },
       "source": [
         "import numpy as np # linear algebra\n",
@@ -56,7 +56,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "from keras.utils.np_utils import to_categorical  "
       ],
-      "execution_count": 30,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,16 +74,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "lNTNsf6SMN0W",
-        "outputId": "50f9b287-2023-4be3-b54b-886802776c33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6baceffd-0b15-4372-fa87-3354f495c072"
       },
       "source": [
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\n",
         "!pip install sentencepiece"
       ],
-      "execution_count": 7,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
       "source": [
         "import tokenization"
       ],
-      "execution_count": 8,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
         "    \n",
         "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
       ],
-      "execution_count": 4,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -157,58 +157,45 @@
         "    \n",
         "    return model"
       ],
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SPBiw3jdQqXo",
-        "outputId": "b0818ffb-a972-4fbe-b3ad-f9ea83bef7cc",
+        "id": "T0lDyjgKQrbW",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff7dc33a-17be-4975-f741-542a83638b20"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SPBiw3jdQqXo"
       },
       "source": [
         "%%time\n",
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "CPU times: user 42.7 s, sys: 11.8 s, total: 54.5 s\n",
-            "Wall time: 7min 33s\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "T0lDyjgKQrbW",
-        "outputId": "de8fc4d2-a888-4a6d-9f94-17680a5d2490",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -225,7 +212,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +238,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +250,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +264,7 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +278,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +291,7 @@
         "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
         "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,62 +305,25 @@
         "train_labels = Y\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bYSK8AjpRYPx",
-        "outputId": "835044ba-03a7-4bb2-eeec-5a92414ea20f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bYSK8AjpRYPx"
       },
       "source": [
         "model = build_model(bert_layer, max_len=160)\n",
         "model.summary()"
       ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"functional_1\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_word_ids (InputLayer)     [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "input_mask (InputLayer)         [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "segment_ids (InputLayer)        [(None, 160)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "keras_layer (KerasLayer)        [(None, 1024), (None 335141889   input_word_ids[0][0]             \n",
-            "                                                                 input_mask[0][0]                 \n",
-            "                                                                 segment_ids[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "tf_op_layer_strided_slice (Tens [(None, 1024)]       0           keras_layer[0][1]                \n",
-            "__________________________________________________________________________________________________\n",
-            "dense (Dense)                   (None, 6)            6150        tf_op_layer_strided_slice[0][0]  \n",
-            "==================================================================================================\n",
-            "Total params: 335,148,039\n",
-            "Trainable params: 335,148,038\n",
-            "Non-trainable params: 1\n",
-            "__________________________________________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "99O-dUk_Ra5y",
-        "outputId": "2944145f-93db-48d1-d56e-4aa820c194fd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "99O-dUk_Ra5y"
       },
       "source": [
         "train_history = model.fit(\n",
@@ -384,27 +334,8 @@
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/6\n",
-            "4699/4699 [==============================] - 491s 105ms/step - loss: 0.3746 - accuracy: 0.4337\n",
-            "Epoch 2/6\n",
-            "4699/4699 [==============================] - 491s 105ms/step - loss: 0.2475 - accuracy: 0.6744\n",
-            "Epoch 3/6\n",
-            "4699/4699 [==============================] - 491s 104ms/step - loss: 0.1450 - accuracy: 0.8349\n",
-            "Epoch 4/6\n",
-            "4699/4699 [==============================] - 491s 105ms/step - loss: 0.0952 - accuracy: 0.8921\n",
-            "Epoch 5/6\n",
-            "4699/4699 [==============================] - 492s 105ms/step - loss: 0.0833 - accuracy: 0.9008\n",
-            "Epoch 6/6\n",
-            "4699/4699 [==============================] - 490s 104ms/step - loss: 0.0737 - accuracy: 0.9013\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -414,17 +345,13 @@
       "source": [
         "y_pred=model.predict(test_input)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ifq6GS_ylKXA",
-        "outputId": "4de43891-30e4-4a9c-a1ef-1e41ce8d360b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ifq6GS_ylKXA"
       },
       "source": [
         "y_pred=np.argmax(y_pred,axis=1)\n",
@@ -432,17 +359,8 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy : 0.5163277880468269\n",
-            "Weighted F1-score : 0.5136379046111991\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
